# TRBloxLauncher

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yaml
data/: clients.json  studios.json
data/manifest/: 2014.json  2016.json  2018.json  2020.json  2021.json
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/installer/: mod.rs  paths.rs  player.rs  studio.rs
src-tauri/src/installer/uri/: linux.rs  mod.rs  windows.rs
src-tauri/src/macros/: lib.rs
src/lib/: footer.svelte  loading.svelte
src/lib/interface/: index.ts  launch.ts  studio.ts
src/lib/interface/client/: index.ts  utility.ts
