[package]
name = "syntax"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/macros/lib.rs"
name = "macros"
proc-macro = true


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "path-all",
    "process-exit",
    "window-set-focus",
    "window-center",
    "window-start-dragging",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23", features = ["stream"] }
chrono = "0.4.31"
dirs = "5.0.1"
tokio = { version = "1.35.1", features = ["fs"] }
zip-extract = "0.1.2"
futures-util = "0.3.30"
serde-xml-rs = "0.6.0"
rand = "0.8.5"

# Remove platform specific dependencies

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
winreg = "0.52.0"

[target.'cfg(target_os = "linux")'.dependencies]
serde_ini = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
